mlapi/.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important  
spec:
  template:
    spec:
      containers:
        - name: project-prediction-container 
          image: w255mids.azurecr.io/savinay/project:92fac8c
          resources:
            requests:
              cpu: 500m
              memory: 2000Mi
            limits:
              cpu: 3000m
              memory: 3Gi
          imagePullPolicy: Always 
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
