mlapi/.k8s/overlays/prod/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: combined-services
spec:
  hosts:
    - savinay.mids255.com
  gateways:
    - istio-ingress/savinay-gateway
  http:
    - match:
        - uri:
            prefix: "/lab4/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: prediction-service  
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/project/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: project-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: prediction-service 
            port:
              number: 8000
